Change settings and implement auto sync

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -148,7 +148,7 @@ li.tab {
     width: 100%;
 }
 
-.connection-settings-form {
+.connection-settings-form, .sync-settings-form {
     display: flex;
     flex-wrap: wrap;
 
