--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -194,18 +194,18 @@ li.tab {
   flex-wrap: wrap;
 
   .input-container {
-    width: 45%;
-    margin-right: 5%;
+    width: 47%;
+    margin-right: 1.5%;
     margin-bottom: 1rem;
 
     &:nth-child(2n) {
-      margin-left: 5%;
+      margin-left: 1.5%;
       margin-right: 0;
     }
 
     input {
       background-color: rgba(255, 255, 255, 0.9);
-      width: 100%;
+      width: calc(100% - 12px);
       padding: 0 5px;
       border: 1px solid #f2f2f2;
       border-radius: 2px;
