session settings - create session - list sessions

--- a/src/popup/common-components/inputs/SearchableSelectBox.module.scss
+++ b/src/popup/common-components/inputs/SearchableSelectBox.module.scss
@@ -18,10 +18,16 @@
       user-select: none;
       padding: 5px;
       cursor: pointer;
-      
+
       .placeholder {
         color: gray;
       }
+    }
+    
+    .note {
+      color: #ababab;
+      font-size: .9em;
+      margin-left: .2rem;
     }
 
     ul.options {
