demo add session

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -187,6 +187,7 @@ li.tab {
   width: 100%;
 }
 
+.add-session-form,
 .connection-settings-form,
 .sync-settings-form,
 .browser-identity-settings-form {
