a few minor changes

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -338,3 +338,9 @@ li.tab {
 .tab-content {
   padding: 20px;
 }
+
+.breadcrumb-separator {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
