--- a/src/settings/settings.css
+++ b/src/settings/settings.css
@@ -29,6 +29,9 @@ body {
   padding: 24px 32px;
   border-bottom: 1px solid #e4e4e7;
   background-color: #fafafa;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .header-content {
